# inox

./: .gitignore  .gitmodules  .larabot.conf  CLA.txt  LICENSE  NOTICE  README.md  build.sbt  install_solvers.sh  test.smt2
.github/workflows/: inox-CI.yml  inox-mac-CI.yml
doc/: API.md  interpolations.md  trees.md  tutorial.md
inductiveExamples/fibonacci/: fibonacci.scala-0.tip  fibonacci.scala-1.tip  fibonacci.scala-2.tip  fibonacci.scala-3.tip  fibonacci.scala-4.tip  fibonacci.scala-5.tip  fibonacci.scala-6.tip
inductiveExamples/mccarthy/: mccarthy.scala-0.tip  mccarthy.scala-1.tip  mccarthy.scala-10.tip  mccarthy.scala-11.tip  mccarthy.scala-12.tip  mccarthy.scala-13.tip  mccarthy.scala-14.tip  mccarthy.scala-15.tip  mccarthy.scala-16.tip  mccarthy.scala-17.tip  mccarthy.scala-18.tip  mccarthy.scala-19.tip  mccarthy.scala-20.tip  mccarthy.scala-21.tip  mccarthy.scala-22.tip  mccarthy.scala-3.tip  mccarthy.scala-5.tip  mccarthy.scala-6.tip  mccarthy.scala-7.tip  mccarthy.scala-9.tip
inductiveExamples/recAdd/: recAdd.scala-0.tip  recAdd.scala-1.tip  recAdd.scala-2.tip  recAdd.scala-3.tip  recAdd.scala-4.tip
project/: Build.scala  plugins.sbt
rust/interop/: Cargo.toml
rust/interop/src/: lib.rs
rust/interop/src/ast/: generated.rs  macros.rs  mod.rs
rust/interop/src/ser/: mod.rs  serializable.rs  serializable_generated.rs
scripts/: install_sbt.sh  install_solvers.sh
src/doc/: API.md  tutorial.md
src/it/: TestSilentReporter.scala
src/it/scala/inox/: TestSuite.scala  (+5 more)
src/main/doc/: API.md  interpolations.md  trees.md  tutorial.md
unmanaged/: inter
(+464 files in other folders)
